# Transfera

./: .gitignore  CODE_OF_CONDUCT.md  DESIGN.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: config.py  debug_ios_connection.py  device_backend.py  ios_device.py  ios_driver_installer.py  main.py  requirements-dev.txt  requirements.txt  test_crash_recovery.py  test_db_core.py  test_device_backend_closures.py  test_exiftool_bootstrapper.py  test_integration.py  test_organizer.py  test_pipeline.py  test_scanner.py  test_smoke.py  test_wpd.py  tier2_manager.py  wpd_backend.py  wsl_bridge.py  wsl_orchestrator.py
backend/api/: auth.py  device_preview.py  rate_limit.py  routes.py  schemas.py  source_types.py  tier2_routes.py  tier2_schemas.py  websocket.py
backend/database/: manager.py  migrations.py  models.py
backend/engines/: batch_manager.py  cache_manager.py  capture_time.py  date_resolver.py  device_import_state.py  duplicate_detector.py  importer.py  metadata_extractor.py  organizer.py  recovery.py  reporter.py  scanner.py  source_reader.py  thread_runner.py  thumbnail_cache.py  thumbnail_ops.py  thumbnailer.py
backend/tests/: conftest.py  test_api_endpoints.py  test_bugfixes.py  test_crash_recovery.py  test_db_core.py  test_device_backend_closures.py  test_exiftool_bootstrapper.py  test_integration.py  test_migrations.py  test_organizer.py  test_pipeline.py  test_prescan.py  test_rate_limit.py  test_recovery.py  test_scanner.py  test_smoke.py  test_wpd.py
backend/utils/: hashing.py
frontend/: generate-icons.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/electron/: main.ts  preload.ts  tsconfig.json
frontend/electron/dist-electron/: main.cjs  main.js  main.js.map  preload.cjs  preload.js  preload.js.map
frontend/public/: site.webmanifest
frontend/release-certs/: transfera-release.cer
frontend/scripts/: build-portable-python.js  create-pfx.ps1  diagnose-portable.ps1  diagnose-unpacked.ps1  generate-release-cert.ps1  pack-release.py  trust-and-install.bat
frontend/src/: App.tsx  index.css
frontend/src/components/: DeviceFolderBrowser.tsx  DuplicateModal.tsx  ErrorBoundary.tsx  ModeSelector.tsx  PageErrorBoundary.tsx  SourcePreviewPanel.d.ts  SourcePreviewPanel.jsx  ThemeToggle.tsx  TransferHistoryTable.tsx
frontend/src/hooks/: use-theme.ts  use-transfer-ws.ts
frontend/src/lib/: api-client.ts  queries.ts  query-client.ts  thumb-queue.ts  thumbnail-fetch.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  DeviceSetupPage.tsx  LibraryPage.tsx  TransferPage.tsx
frontend/src/store/: transfer.ts
frontend/src/types/: api.ts  electron.d.ts
native/wpd_helper/: CMakeLists.txt  build.bat  wpd_helper.cpp
scratch/: download_logs.py  find_installation_details.py  parse_logs.py  print_results.py  scan_all_logs.py  search_copy.py  search_org.py  search_wpd.py
winget/: Transfera.Transfera.installer.yaml  Transfera.Transfera.locale.en-US.yaml  Transfera.Transfera.yaml
