[project]
name = "transfera"
version = "2.3.0"
description = "Desktop application for transferring and organizing photos and videos"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"
