[project]
name = "transfera"
version = "2.4.0"
description = "Desktop application for transferring and organizing photos and videos"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = [
    "E501",   # line-too-long
    "B904",   # raise-without-from-inside-except
    "SIM105", # suppressible-exception (try-except-pass to contextlib.suppress)
    "N806",   # non-lowercase-variable-in-function
    "E402",   # module-import-not-at-top-of-file
    "F841",   # unused-variable
    "ARG001", # unused-function-argument
    "ARG002", # unused-method-argument
    "UP042",  # replace-str-enum
    "SIM108", # if-else-block-instead-of-if-exp
    "B007",   # unused-loop-control-variable
    "UP045",  # non-pep604-annotation-optional
    "SIM102", # collapsible-if
    "B023",   # function-uses-loop-variable
    "N811",   # constant-imported-as-non-constant
    "UP047",  # non-pep695-generic-function
    "B905",   # zip-without-explicit-strict
    "N801",   # invalid-class-name
    "N818",   # error-suffix-on-exception-name
    "SIM115", # open-file-with-context-handler
    "SIM117", # multiple-with-statements
]

[tool.ruff.format]
quote-style = "double"
